[package]
name = "tests"
version = "0.1.0"
authors = ["iovxw <iovxw@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cartridge = { path = "../cartridge", version = "0.0" }

[dev-dependencies]
trybuild = "1.0"
macrotest = "1.0"
